--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,34 @@
-#root {
-  max-width: 1280px;
+body{
+  font-family: sans-serif;
   margin: 0 auto;
-  padding: 2rem;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  background-color: #000;
+  color: #fff;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App{
+  display: flex;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading{
+  margin-bottom: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.input-wrapper label{
+  display: inline-block;
 }
 
-.card {
-  padding: 2em;
+.result{
+  display: flex;
 }
 
-.read-the-docs {
-  color: #888;
+.box-image, .box-result{
+  display: block;
+  padding: 20px;
+  background-color: orange;
 }
+
