--- a/src/App.css
+++ b/src/App.css
@@ -35,19 +35,8 @@ body{
   margin-bottom: 10px;
 }
 
-
-.input-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin: 20px 0;
-}
-
-.input-wrapper label {
-  display: inline-block;
-  margin-bottom: 10px;
+Button{
+  margin-left: 20px;
 }
 
 input[type="file" i]{
@@ -58,6 +47,7 @@ input[type="file" i]{
   display: flex;
   flex-direction: column;
   max-width: 90%;
+  margin-top: 20px;
   gap: 20px;
 }
 
