--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body{
   font-family: sans-serif;
   margin: 0 auto;
-  height: 100vh;
+ min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
